# shamba

./: .gitignore  LICENCE.txt  README.md  docker-compose.yaml  readme.md  setup.ps1  setup.sh  shamba.pyw  versions.md
server/: README.md  main.py  pyproject.toml
shamba/: Dockerfile  Pipfile  README.md  pyproject.toml  pytest.ini  shamba_cl_.py  shamba_cl_.py.bak  shamba_command_line.py
shamba/client/: Dockerfile  README.md  biome.json  components.json  esbuild.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
shamba/client/src/: App.css  App.tsx  actions.civet  defaultData.ts  index.tsx  lenses.civet  main.tsx  routesMap.civet
shamba/default_input/: crop_ipcc_defaults.csv  tree_defaults.csv  tree_defaults_cl.csv
shamba/gui/: dialog_setup.py  disclaimer.py  emit_model.py  general_dialog.py  general_model.py  map.py  name_dialog.py  page_change.py  plot.py  project_dialog.py  project_model.py  translate_.py
shamba/gui/designer/: disclaimer_ui.py  general_dialog_ui.py  main_ui.py  name_dialog_ui.py  project_dialog_ui.py
shamba/model/: cfg.py  climate.py  climate_cl.py  common_schema.py  configuration.py  crop_model.py  crop_model_cl.py  crop_params.py  emit.py  emit_cl.py  io_.py  litter.py  litter_cl.py  main.py  soil_model.py  soil_model_cl.py  soil_params.py  soil_params_cl.py  tree_growth.py  tree_growth_cl.py  tree_model.py  tree_model_cl.py  tree_params.py  tree_params_cl.py
shamba/model/command_line/: climate.py  crop_model.py  crop_params.py  emit.py  litter.py  soil_model.py  soil_params.py  tree_growth.py  tree_model.py  tree_params.py
shamba/model/common/: calculate_emissions.py  constants.py  csv_handler.py  data_handler.py  io_handler.py  validations.py
shamba/model/gui/: climate.py  crop_model.py  crop_params.py  dialog_setup.py  disclaimer.py  emit.py  litter.py  soil_model.py  soil_params.py  tree_growth.py  tree_model.py  tree_params.py
shamba/model/soil_models/: forward_soil_model.py  inverse_soil_model.py  soil_model_types.py
shamba/server/: main.py
shamba/server/static/: index.html
shamba/shamba_projects/UG_TS_2025/: output_WL\plot_1\plot_1_climate.csv  output_WL\plot_1\plot_1_emissions.csv  (+12 more)
shamba/tests/: conftest.py  test_crop_emissions.py  test_crop_model.py  test_fertiliser_emissions.py  test_fertiliser_model.py  test_fire_emissions.py  test_litter_emissions.py  test_litter_model.py  test_tree_emissions.py
(+30 files in other folders)
