[project]
name = "server"
version = "0.1.0"
description = "Shamba server"
authors = [
    {name = "Plan Vivo"}
]
license = {text = "UNLICENSED"}
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "shamba @ ../shamba"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
